--- a/source/blocks/dropdown-date/dropdown-date.pug
+++ b/source/blocks/dropdown-date/dropdown-date.pug
@@ -5,9 +5,8 @@ mixin dropdown-date({ labelTexts = [], inputNames = [], startAt, endAt, minDate,
     const blockName = 'dropdown-date';
     const isDoubleInput = inputNames.length > 1;
     const wrapperClass = [blockName, `js-${blockName}`];
-    const inputClass = [`${blockName}__input`, `js-${blockName}__input`, isDoubleInput && `${blockName}__input_small`];
-    const secondInputClass = [`${blockName}__input`, `js-${blockName}__input`, `${blockName}__input_small`];
-    const iconClass = ['material-icons', `${blockName}__icon`, `js-${blockName}__icon`];
+    const inputClass = [`${blockName}__input`, `js-${blockName}__input`, isDoubleInput && `${blockName}__input_size_small`];
+    const secondInputClass = [`${blockName}__input`, `js-${blockName}__input`, `${blockName}__input_size_small`];
     const inputPlaceholder = isDoubleInput ? 'ДД.ММ.ГГГГ' : 'ДД.ММ \u2013 ДД.ММ';
 
   div(
@@ -19,9 +18,7 @@ mixin dropdown-date({ labelTexts = [], inputNames = [], startAt, endAt, minDate,
   )
     div(class=`${blockName}__inputs`)
       div(class=inputClass)
-        +input-field({labelText: labelTexts[0]})(name=inputNames[0], placeholder=inputPlaceholder, readonly)
-        i(class=iconClass) expand_more
+        +input-field({ inputType: 'dropdown', labelText: labelTexts[0] })(name=inputNames[0], placeholder=inputPlaceholder, readonly)
       if (isDoubleInput)
         div(class=secondInputClass)
-          +input-field({labelText: labelTexts[1] || labelTexts[0]})(name=inputNames[1], placeholder=inputPlaceholder, readonly)
-          i(class=iconClass) expand_more
+          +input-field({ inputType: 'dropdown', labelText: labelTexts[1] || labelTexts[0] })(name=inputNames[1], placeholder=inputPlaceholder, readonly)
