--- a/source/blocks/dropdown-list/dropdown-list.pug
+++ b/source/blocks/dropdown-list/dropdown-list.pug
@@ -4,20 +4,17 @@ include ../button/button.pug
 mixin dropdown-list({ listItems = [], labelText, inputName, inputPlaceholder, withButtons = false, active = false } = {})
   -
     const blockName = 'dropdown-list';
-    const wrapperClass = [blockName, `js-${blockName}`, withButtons && `${blockName}_wide`];
+    const wrapperClass = [blockName, `js-${blockName}`, withButtons && `${blockName}_width_wide`];
     const inputClass = [`${blockName}__input`, `js-${blockName}__input`];
-    const iconClass = ['material-icons', `${blockName}__icon`, `js-${blockName}__icon`];
     const listClass = [`${blockName}__list`, `js-${blockName}__list`];
     const itemClass = [`${blockName}__item`, `js-${blockName}__item`];
     const itemButtonClass = [`${blockName}__item-button`, `js-${blockName}__item-button`];
     const itemCounterClass = [`${blockName}__item-counter`, `js-${blockName}__item-counter`];
-    const resetButtonClass = [`${blockName}__button`, `${blockName}__button_reset`, `js-${blockName}__button_reset`];
-    const acceptButtonClass = [`${blockName}__button`, `${blockName}__button_accept`, `js-${blockName}__button_accept`];
+    const buttonClass = [`${blockName}__button`, `js-${blockName}__button`];
 
   div(class=wrapperClass, data-active=active)
     div(class=inputClass)
-      +input-field({labelText: labelText})(name=inputName, placeholder=inputPlaceholder, readonly)
-      i(class=iconClass) expand_more
+      +input-field({ inputType: 'dropdown', labelText: labelText })(name=inputName, placeholder=inputPlaceholder, readonly)
     div(class=listClass)
       each item in listItems
         div(
@@ -35,7 +32,7 @@ mixin dropdown-list({ listItems = [], labelText, inputName, inputPlaceholder, wi
             button(class=itemButtonClass, type='button') +
       if (withButtons)
         div(class=`${blockName}__buttons`)
-          div(class=resetButtonClass)
-            +button({ buttonText: 'Очистить', buttonStyle: 'as-text as-text_faint' })
-          div(class=acceptButtonClass)
-            +button({ buttonText: 'Применить', buttonStyle: 'as-text' })
+          div(class=buttonClass, data-action="reset")
+            +button({ buttonText: 'Очистить', buttonStyle: 'text-faint' })
+          div(class=buttonClass, data-action="accept")
+            +button({ buttonText: 'Применить', buttonStyle: 'text' })
