--- a/source/blocks/dropdown-list/dropdown-list.scss
+++ b/source/blocks/dropdown-list/dropdown-list.scss
@@ -6,40 +6,6 @@
 
   &__input {
     position: relative;
-    cursor: pointer;
-
-    &:hover input {
-      border-color: $color_main-50;
-    }
-
-    input {
-      padding-right: 4.5rem;
-      text-overflow: ellipsis;
-      cursor: pointer;
-    }
-
-    &_active input {
-      border-color: $color_main-50;
-      border-radius: 0.4rem 0.4rem 0 0;
-    }
-  }
-
-  &__input:hover &__icon {
-    color: $color_main-75;
-  }
-
-  &__icon {
-    position: absolute;
-    right: 1rem;
-    bottom: 1rem;
-    color: $color_main-50;
-    user-select: none;
-    pointer-events: none;
-    transition: transform 0.3s ease-in-out;
-
-    &_active {
-      transform: rotate(-180deg);
-    }
   }
 
   &__list {
@@ -137,7 +103,7 @@
     }
   }
 
-  &_wide {
+  &_width_wide {
     max-width: 32rem;
   }
 }
