--- a/source/blocks/subscription/subscription.pug
+++ b/source/blocks/subscription/subscription.pug
@@ -9,4 +9,4 @@ mixin subscription({ actionLink = '#mock-address', labelText, placeholderText })
   form(class=wrapperClass, action=actionLink, method='post')
     +input-field({ inputType: 'email', labelText: labelText })(required, placeholder=placeholderText)
     span(class=`${blockName}__button`)
-      +button({ buttonType: 'submit', buttonStyle: 'as-text as-text_gradient', withArrow: true })
+      +button({ buttonType: 'submit', buttonStyle: 'text-gradient', withArrow: true })
