--- a/source/pages/ui-kit/cards/cards.pug
+++ b/source/pages/ui-kit/cards/cards.pug
@@ -32,7 +32,7 @@ block content
       .cards__item
         +card-signin({})
 
-    .cards__column.cards__column_narrow
+    .cards__column.cards__column_width_narrow
       .cards__item
         +card-calendar({
           startAt: '2019, 8, 19',
