--- a/source/pages/website/room-details/room-details.scss
+++ b/source/pages/website/room-details/room-details.scss
@@ -95,7 +95,7 @@ $height_reviews: 30.7rem;
       max-width: none;
     }
 
-    &_aligned-left {
+    &_position_left {
       margin-right: auto;
     }
   }
