--- a/source/pages/website/search-room/search-room.scss
+++ b/source/pages/website/search-room/search-room.scss
@@ -104,11 +104,11 @@
     max-width: 26.6rem;
     margin-bottom: 2.9rem;
 
-    &_closer {
+    &_position_closer {
       margin-bottom: 2.5rem;
     }
 
-    &_closest {
+    &_position_closest {
       margin-bottom: 2rem;
     }
   }
