--- a/source/blocks/carousel/carousel.scss
+++ b/source/blocks/carousel/carousel.scss
@@ -28,11 +28,11 @@
       opacity: 1;
     }
 
-    &_prev {
+    &_type_prev {
       transform: translateX(-100%);
     }
 
-    &_next {
+    &_type_next {
       transform: translateX(100%);
     }
   }
@@ -60,7 +60,7 @@
       box-shadow: 0 0 0.1rem 0.1rem $color_first;
     }
 
-    &_prev {
+    &_type_prev {
       left: 0;
       background: linear-gradient(90deg, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0) 99.99%, rgba(255, 255, 255, 0) 100%);
 
@@ -69,7 +69,7 @@
       }
     }
 
-    &_next {
+    &_type_next {
       right: 0;
       background: linear-gradient(-90deg, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0) 99.99%, rgba(255, 255, 255, 0) 100%);
 
