Remove empty objects from pug mixin calls (#28)

--- a/source/pages/ui-kit/cards/cards.pug
+++ b/source/pages/ui-kit/cards/cards.pug
@@ -15,9 +15,9 @@ block content
   .cards.js-cards
     .cards__column
       .cards__item
-        +card-search({})
+        +card-search()
       .cards__item
-      +card-signup({})
+        +card-signup()
 
     .cards__column
       .cards__item
@@ -30,7 +30,7 @@ block content
           addServicePrice: 300,
         })
       .cards__item
-        +card-signin({})
+        +card-signin()
 
     .cards__column.cards__column_width_narrow
       .cards__item
