--- a/source/pages/website/search-room/search-room.pug
+++ b/source/pages/website/search-room/search-room.pug
@@ -102,7 +102,7 @@ block content
           | Номера, которые мы для вас подобрали
         .search-room__results-grid.search-room__results-grid_hidden.js-search-room__results-grid
           .search-room__results-card.js-search-room__results-card.search-room__results-card_hidden
-            +card-room({})
+            +card-room()
         .search-room__results-pagination.js-search-room__results-pagination
           +pagination({
             addDescription: 'вариантов аренды',
