--- a/source/pages/website/room-details/room-details.pug
+++ b/source/pages/website/room-details/room-details.pug
@@ -53,7 +53,7 @@ block content
             h2.room-details__title Отзывы посетителей номера
             span.room-details__reviews-counter.js-room-details__reviews-counter
           .room-details__reviews-item.js-room-details__reviews-item.room-details__reviews-item_hidden
-            +comment({})
+            +comment()
 
         .room-details__item.room-details__item_position_left
           h2.room-details__title Правила
