--- a/source/pages/ui-kit/cards/cards.pug
+++ b/source/pages/ui-kit/cards/cards.pug
@@ -13,58 +13,59 @@ block append mixins
 
 block content
   .cards.js-cards
-    .cards__column
-      .cards__item
-        +card-search()
-      .cards__item
-        +card-signup()
+    .cards__container
+      .cards__column
+        .cards__item
+          +card-search()
+        .cards__item
+          +card-signup()
 
-    .cards__column
-      .cards__item
-        +card-book({
-          roomNumber: 888,
-          roomIsLuxury: true,
-          roomPrice: 9990,
-          discountPrice: 2179,
-          servicePrice: 0,
-          addServicePrice: 300,
-        })
-      .cards__item
-        +card-signin()
-
-    .cards__column.cards__column_width_narrow
-      .cards__item
-        +card-calendar({
-          startAt: '2019, 8, 19',
-          endAt: '2019, 8, 23',
-          todayDate: '2019, 8, 8',
-        })
-      .cards__item
-        .cards__card-room.js-cards__card-room
-          +card-room({
+      .cards__column
+        .cards__item
+          +card-book({
             roomNumber: 888,
             roomIsLuxury: true,
             roomPrice: 9990,
-            roomRating: 5,
-            roomReviews: 145,
-            carouselImgSrcList: [
-              '~blocks/card-room/img/example-room-1.png',
-              '~blocks/card-room/img/example-room-2.png',
-              '~blocks/card-room/img/example-room-3.png',
-              '~blocks/card-room/img/example-room-4.png',
-            ],
+            discountPrice: 2179,
+            servicePrice: 0,
+            addServicePrice: 300,
           })
-      .cards__item
-        .cards__card-room.js-cards__card-room
-          +card-room({
-            roomNumber: 840,
-            roomPrice: 9900,
-            roomRating: 4,
-            roomReviews: 65,
-            carouselImgSrcList: [
-              '~blocks/card-room/img/example-room-5.png',
-              '~blocks/card-room/img/example-room-5.png',
-              '~blocks/card-room/img/example-room-5.png',
-              '~blocks/card-room/img/example-room-5.png',
-            ],
+        .cards__item
+          +card-signin()
+
+      .cards__column.cards__column_width_narrow
+        .cards__item
+          +card-calendar({
+            startAt: '2019, 8, 19',
+            endAt: '2019, 8, 23',
+            todayDate: '2019, 8, 8',
           })
+        .cards__item
+          .cards__card-room.js-cards__card-room
+            +card-room({
+              roomNumber: 888,
+              roomIsLuxury: true,
+              roomPrice: 9990,
+              roomRating: 5,
+              roomReviews: 145,
+              carouselImgSrcList: [
+                '~blocks/card-room/img/example-room-1.png',
+                '~blocks/card-room/img/example-room-2.png',
+                '~blocks/card-room/img/example-room-3.png',
+                '~blocks/card-room/img/example-room-4.png',
+              ],
+            })
+        .cards__item
+          .cards__card-room.js-cards__card-room
+            +card-room({
+              roomNumber: 840,
+              roomPrice: 9900,
+              roomRating: 4,
+              roomReviews: 65,
+              carouselImgSrcList: [
+                '~blocks/card-room/img/example-room-5.png',
+                '~blocks/card-room/img/example-room-5.png',
+                '~blocks/card-room/img/example-room-5.png',
+                '~blocks/card-room/img/example-room-5.png',
+              ],
+            })
