--- a/source/pages/ui-kit/cards/cards.scss
+++ b/source/pages/ui-kit/cards/cards.scss
@@ -1,14 +1,17 @@
 .cards {
-  display: flex;
-  justify-content: center;
-  align-content: flex-start;
-  flex-wrap: wrap;
   width: 100%;
-  max-width: 1440px;
-  margin: auto;
-  padding: 15rem 14rem 14rem;
-  background: #F4F4F6 url('./img/ui-kit-logo.svg')
-    3rem 3rem/4.8rem 4.8rem no-repeat;
+
+  &__container {
+    display: flex;
+    justify-content: center;
+    align-content: flex-start;
+    flex-wrap: wrap;
+    max-width: 1440px;
+    margin: auto;
+    padding: 15rem 14rem 14rem;
+    background: #F4F4F6 url('./img/ui-kit-logo.svg')
+      3rem 3rem/4.8rem 4.8rem no-repeat;
+  }
 
   &__column {
     width: 38rem;
