--- a/source/pages/ui-kit/form-elements/form-elements.scss
+++ b/source/pages/ui-kit/form-elements/form-elements.scss
@@ -1,16 +1,19 @@
 @import '~styles/variables';
 
 .form-elements {
-  display: flex;
-  justify-content: space-between;
-  align-content: flex-start;
-  flex-wrap: wrap;
   width: 100%;
-  max-width: 1440px;
-  margin: auto;
-  padding: 14.3rem 14.1rem 14rem;
-  background: url('./img/ui-kit-logo.svg')
-    3rem 3rem/4.8rem 4.8rem no-repeat;
+
+  &__container {
+    display: flex;
+    justify-content: space-between;
+    align-content: flex-start;
+    flex-wrap: wrap;
+    max-width: 1440px;
+    margin: auto;
+    padding: 14.3rem 14.1rem 14rem;
+    background: url('./img/ui-kit-logo.svg')
+      3rem 3rem/4.8rem 4.8rem no-repeat;
+  }
 
   &__column {
     width: 32rem;
