--- a/source/pages/ui-kit/index/index.pug
+++ b/source/pages/ui-kit/index/index.pug
@@ -8,24 +8,25 @@ block append mixins
 
 block content
   .index
-    h3.index__title UI Kit
-    .index__list
-      +list-bullet({
-        listItems: [
-          '<a class="index__link" href="./form-elements.html">Form Elements</a>',
-          '<a class="index__link" href="./cards.html">Cards</a>',
-          '<a class="index__link" href="./headers-footers.html">Headers & Footers</a>',
-        ]
-      })
+    .index__container
+      h3.index__title UI Kit
+      .index__list
+        +list-bullet({
+          listItems: [
+            '<a class="index__link" href="./form-elements.html">Form Elements</a>',
+            '<a class="index__link" href="./cards.html">Cards</a>',
+            '<a class="index__link" href="./headers-footers.html">Headers & Footers</a>',
+          ]
+        })
 
-    h3.index__title Website
-    .index__list
-      +list-bullet({
-        listItems: [
-          '<a class="index__link" href="./landing-page.html">Landing Page</a>',
-          '<a class="index__link" href="./search-room.html">Search Room</a>',
-          '<a class="index__link" href="./room-details.html">Room Details</a>',
-          '<a class="index__link" href="./registration.html">Registration</a>',
-          '<a class="index__link" href="./sign-in.html">Sign In</a>',
-        ]
-      })
+      h3.index__title Website
+      .index__list
+        +list-bullet({
+          listItems: [
+            '<a class="index__link" href="./landing-page.html">Landing Page</a>',
+            '<a class="index__link" href="./search-room.html">Search Room</a>',
+            '<a class="index__link" href="./room-details.html">Room Details</a>',
+            '<a class="index__link" href="./registration.html">Registration</a>',
+            '<a class="index__link" href="./sign-in.html">Sign In</a>',
+          ]
+        })
