--- a/source/pages/ui-kit/index/index.scss
+++ b/source/pages/ui-kit/index/index.scss
@@ -2,11 +2,14 @@
 
 .index {
   width: 100%;
-  max-width: 1440px;
-  margin: auto;
-  padding: 14.3rem 14.1rem 14rem;
-  background: url('./img/ui-kit-logo.svg')
-    3rem 3rem/4.8rem 4.8rem no-repeat;
+
+  &__container {
+    max-width: 1440px;
+    margin: auto;
+    padding: 14.3rem 14.1rem 14rem;
+    background: url('./img/ui-kit-logo.svg')
+      3rem 3rem/4.8rem 4.8rem no-repeat;
+  }
 
   &__title {
     margin-bottom: 1.5rem;
